--- a/.env.example
+++ b/.env.example
@@ -9,20 +9,20 @@
 # Resend
 # Used for the contact form
 # @see https://resend.com
-EMAIL_FROM=contact@example.com
-EMAIL_TO="personal@personal.com"
+# EMAIL_FROM=contact@example.com
+# EMAIL_TO="personal@personal.com"
 
-RESEND_API_KEY="re_xyzabc..."
+# RESEND_API_KEY="re_xyzabc..."
 
 # Cloudflare Turnstile
 # Used to protect your site from bad bots
 # @see https://www.cloudflare.com/products/bot-management/
-NEXT_PUBLIC_TURNSTILE_SITE_KEY="0x..."
-TURNSTILE_SECRET_KEY="0x..."
+# NEXT_PUBLIC_TURNSTILE_SITE_KEY="0x..."
+# TURNSTILE_SECRET_KEY="0x..."
 
 # Database URL
 # The database URL is used to connect to your database. It's used for commenting, and authenticated.
-DATABASE_URL='postgresql://neondb_owner:'
+# DATABASE_URL='postgresql://neondb_owner:'
 
 # Authentication
 # You can generate the secret via 'openssl rand -base64 32' on Unix
